<resources>
    <string name="app_name">Quire</string>
    <string name="quire">QUIRE</string>
    <string name="profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="feed">Feed</string>
    <string name="login">Login</string>
    <string name="signup">Don\'t have an account? Sign Up Now!</string>
    <string name="facebook_app_id">1669628833358232</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up!</string>
    <string name="fblogin">Login with Facebook</string>
    <string name="ask_quire">What\'s your quire?</string>
    <string name="answer_choices">Possible answer choices?</string>
    <string name="more_choices">Add more choices</string>
    <string name="title_activity_fullscreen_detail">FullscreenDetailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="password_hint">password</string>
    <string name="email_hint">email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="quire_prompt">Quire:</string>
    <string name="followers">Followers</string>
    <string name="change_user_info">Change User Info</string>
    <string name="username">username</string>
    <string name="save_changes">Save Changes</string>
    <string name="settings">Settings</string>
    <string name="post">Post</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="mark_as_done">Mark As Done</string>
    <string name="time_remaining">Time remaining</string>
    <string name="following">Following</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_lowercase">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="comments">Comments</string>
    <string name="voters">Voters</string>
    <string name="open">OPEN</string>
    <string name="closed">CLOSED</string>
    <string name="share">Share</string>
    <string name="set_result">Set Result</string>
    <string name="set_your_result">Set Your Result</string>
    <string name="tell_result">Tell us about your result...</string>
    <string name="post_result">Post Result</string>
    <string name="result">Result</string>
</resources>
