<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"
            style="@style/smallHeaderStyle"
            android:visible="true">
            <TextView
                android:text="My prooofile"/>
        </item>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"
            style="@style/smallHeaderStyle"
            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/action_logout"
            style="@style/smallHeaderStyle"/>
    </group>


</menu>