<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="55dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <ImageView
                android:layout_width="277dp"
                android:layout_height="120dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_full"
                android:id="@+id/logo"/>

        <!-- Name Label -->
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            style="@style/textRegularStyle"
            android:inputType="textCapSentences"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"/>

        <!-- Screen Name Label -->
        <EditText
            android:id="@+id/screen_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            style="@style/textRegularStyle"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"/>

        <!-- Email Label -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            style="@style/textRegularStyle"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"/>

        <!-- Password Label -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:password="true"
            style="@style/textRegularStyle"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:background="@drawable/button_dark"
                style="@style/buttonStyle"
                android:text="@string/sign_up" />
        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_fblogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            style="@style/textSmallStyle"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/link_login"
            android:text="@string/login"
            style="@style/textSmallStyle"
            android:textColor="@color/textColorAccent"
            android:layout_alignTop="@+id/btn_fblogin"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

    </RelativeLayout>

</RelativeLayout>