<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/rlInput">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="55dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:weightSum="1">
<!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/logo"
                android:text="@string/app_name"
                android:textSize="50dp"
                android:textStyle="bold"
                android:textColor="@color/textColorAccent" />-->

            <ImageView
                android:layout_width="277dp"
                android:layout_height="120dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_full"
                android:id="@+id/logo"
                android:layout_weight="0.23" />

            <!-- Email Label -->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/email"
                style="@style/textRegularStyle"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:inputType="textEmailAddress" />

            <!-- Password Label -->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:gravity="center_horizontal"
                android:password="true"
                style="@style/textRegularStyle"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_dark"
                style="@style/buttonStyle"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_in_lowercase" />

        </LinearLayout>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btn_fblogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            style="@style/textSmallestStyle"
            android:textColor="@color/textColorAccent"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/link_signup"
            android:text="@string/create_account"
            style="@style/textSmallestStyle"
            android:textColor="@color/textColorAccent"
            android:layout_alignTop="@+id/btn_fblogin"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp" />

    </RelativeLayout>

</RelativeLayout>
