<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.facebook.quire.activities.SetResultActivity2">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/smallHeaderStyle"
        android:background="?attr/colorPrimary">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivBackward"
                android:src="@drawable/ic_back_light"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/ivBackward"
                android:text="@string/set_result"
                android:layout_centerVertical="true"
                style="@style/smallHeaderStyle"
                android:textColor="@color/white"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:id="@+id/rlFinish">
                <TextView
                    android:id="@+id/tvFinish"
                    android:text="@string/post_result"
                    style="@style/smallHeaderStyle"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvFinish"
                    android:src="@drawable/ic_next_light"/>

            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llContent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/llWrite"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etText"
                android:hint="@string/tell_result"
                android:inputType="textCapSentences"
                android:padding="20dp"
                android:gravity="top"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOptions"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPicture"
                android:layout_margin="5dp"
                android:src="@drawable/ic_camera"
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/ivGallery"
                android:layout_margin="5dp"
                android:src="@drawable/ic_gallery"
                android:layout_width="40dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPictureSpace"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
